# free-deep-research

./: .env  .env.dev  .env.example  .env.prod  .env.template  .eslintrc.js  .prettierrc.js  AI_ENHANCED_TIMELINE_SYSTEM.md  BRANCH-REORGANIZATION.md  CHANGELOG.md  COMPLETE_USER_GUIDE_2025.md  COMPREHENSIVE_GAP_ANALYSIS_REPORT.md  ENHANCED_DOCUMENTATION_QA_AGENT.md  IMMEDIATE_ACTION_PLAN_2025.md  LICENSE  MIGRATION_GUIDE.md  PHASE_1_ACTUAL_COMPLETION_REPORT.md  PHASE_1_VALIDATION.md  PHASE_2_H2_API_KEY_MANAGEMENT_COMPLETION.md  PHASE_4_1_COMPLETION_REPORT.md  PHASE_4_2_COMPLETION_REPORT.md  PHASE_4_6_IMPLEMENTATION_SUMMARY.md  PHASE_4_EXTENSIONS_PLAN.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_5_0_IMPLEMENTATION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README-Docker.md  README.md  REORGANIZATION-CHANGES-SUMMARY.md  REORGANIZATION-COMPLETE.md  REPOSITORY_ABOUT_OPTIMIZATION.md  REPOSITORY_STRUCTURE.md  SYSTEM_COMPLETION_VERIFICATION_2025.md  TASK_STATUS.md  deploy-complete-system.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.js  (+5 more)
ai-orchestrator/: INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  (+3 more)
bmad-agent/free-deep-research/: .env.docker  .env.template  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
bmad-agent/free-deep-research/.github/: pull_request_template.md
bmad-agent/free-deep-research/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bmad-agent/free-deep-research/.github/workflows/: build.yml  test.yml
bmad-agent/free-deep-research/.husky/: pre-commit  pre-push
bmad-agent/free-deep-research/docker/database/: tauri-init.sh
bmad-agent/free-deep-research/docker/prometheus/: tauri-prometheus.yml
bmad-agent/free-deep-research/docs/: API_INTEGRATION_GUIDE.md  DEVELOPER_GUIDE.md  EPIC_5_SECURITY_COMPLETION_REPORT.md  MIGRATION_GUIDE.md  VERSION_HISTORY.md  architecture.md  checklist.md
bmad-agent/free-deep-research/e2e/: global-setup.ts
bmad-agent/free-deep-research/src/: App.tsx
bmad-agent/free-deep-research/src-tauri/: Cargo.toml  tauri.conf.json
bmad-agent/free-deep-research/src-tauri/src/: lib.rs  main.rs
bmad-agent/free-deep-research/src-tauri/src/commands/: ai_marketplace.rs  api_management.rs  blockchain.rs  federated_research.rs  ml_commands.rs  mod.rs  monitoring.rs  nlp_engine.rs  quantum_ready.rs  research.rs  research_workflow.rs  template_management.rs  v1_2_v2_0_features.rs
bmad-agent/free-deep-research/src-tauri/src/error/: api_error.rs  mod.rs  performance_error.rs  research_error.rs  security_error.rs  storage_error.rs
bmad-agent/free-deep-research/src-tauri/src/models/: api_key.rs  blockchain.rs  configuration.rs  mod.rs  research_template.rs  research_workflow.rs  security.rs
bmad-agent/free-deep-research/src-tauri/src/services/: bmad_integration.rs  mod.rs  performance_optimizer.rs
bmad-agent/free-deep-research/src-tauri/src/services/analytics/: business_intelligence.rs  dashboard_engine.rs  predictive_analytics.rs  usage_analytics.rs
bmad-agent/free-deep-research/src-tauri/src/services/api_manager/: key_rotator.rs  mod.rs  model_manager.rs  rate_limiter.rs  service_integration.rs
bmad-agent/free-deep-research/src-tauri/src/services/blockchain/: mod.rs
bmad-agent/free-deep-research/src-tauri/src/services/cloud_sync/: mod.rs
bmad-agent/free-deep-research/src-tauri/src/services/collaboration/: mod.rs
bmad-agent/free-deep-research/src-tauri/src/services/data_persistence/: backup_manager.rs  mod.rs  schema_v3.sql
bmad-agent/free-deep-research/src-tauri/src/services/distributed/: mod.rs
bmad-agent/free-deep-research/src-tauri/src/services/enterprise/: mod.rs
bmad-agent/free-deep-research/src-tauri/src/services/federated_research/: mod.rs
bmad-agent/free-deep-research/src-tauri/src/services/ml_engine/: inference_engine.rs  mod.rs  recommendation_system.rs
bmad-agent/free-deep-research/src-tauri/src/services/mobile_platform/: mobile_api.rs  mod.rs
bmad-agent/free-deep-research/src-tauri/src/utils/: http_client.rs  validation.rs
bmad-agent/free-deep-research/src-tauri/tests/: phase1_verification.rs  phase2_verification.rs
bmad-agent/free-deep-research/src/components/: Layout.tsx
bmad-agent/free-deep-research/src/components/advanced-analytics/: AdvancedAnalyticsDashboard.tsx
bmad-agent/free-deep-research/src/components/analytics/: AnalyticsDashboard.tsx  BusinessReports.tsx  PerformanceMonitor.tsx  PredictiveAnalytics.tsx  UsageAnalytics.tsx  index.tsx
bmad-agent/free-deep-research/src/components/api-management/: ApiKeyManager.tsx  KeyRotationDashboard.tsx  RateLimitDashboard.tsx  ServiceIntegrationDashboard.tsx
bmad-agent/free-deep-research/src/components/bmad-integration/: BMadIntegrationDashboard.tsx
bmad-agent/free-deep-research/src/components/common/: LazyWrapper.tsx  LoadingSpinner.tsx
bmad-agent/free-deep-research/src/components/dashboard/: ExecutiveDashboard.tsx
bmad-agent/free-deep-research/src/components/monitoring/: RealTimeConsole.tsx
bmad-agent/free-deep-research/src/components/research/: ResearchWorkflow.tsx  ResearchWorkflowDashboard.tsx  WorkflowProgressNavigator.tsx
bmad-agent/free-deep-research/src/components/settings/: ConfigurationPanel.tsx
bmad-agent/free-deep-research/src/components/templates/: TemplateManagementDashboard.tsx
bmad-agent/free-deep-research/src/hooks/: useDashboardData.ts  useSystemHealth.ts
bmad-agent/free-deep-research/src/hooks/__tests__/: useDashboardData.test.tsx
bmad-agent/free-deep-research/src/services/: configBridge.ts
bmad-agent/free-deep-research/src/services/__tests__/: apiManager.test.ts  researchWorkflow.test.ts
bmad-agent/free-deep-research/src/styles/: globals.css
bmad-agent/free-deep-research/src/types/: api.ts
bmad-agent/free-deep-research/src/utils/: debug.ts  performance.ts
bmad-agent/free-deep-research/src/utils/__tests__/: security.test.ts
bmad-agent/free-deep-research/tests/integration/: workflow-lifecycle.test.ts
(+433 files in other folders)
