[package]
name = "free-deep-research-system"
version = "1.0.0"
description = "Enterprise-grade deep research system operating entirely on free service tiers"
authors = ["BMAD AI Agent Team"]
license = "MIT"
repository = "https://github.com/usemanusai/free-deep-research"
edition = "2021"

[workspace]
members = ["src-tauri"]

[workspace.dependencies]
# Core Tauri dependencies
tauri = { version = "1.5", features = ["api-all"] }
tauri-build = { version = "1.5", features = [] }

# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Database and storage
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and environment
config = "0.14"
dotenv = "0.15"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"

[profile.dev]
# Development profile optimized for fast compilation
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
# Release profile optimized for performance and size
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

[profile.release-with-debug]
# Release profile with debug symbols for profiling
inherits = "release"
debug = true
strip = "none"
