[package]
name = "free-deep-research-system"
version = "1.0.0"
description = "Enterprise-grade deep research system operating entirely on free service tiers"
authors = ["BMAD AI Agent Team"]
license = "MIT"
repository = "https://github.com/usemanusai/free-deep-research"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "1.5", features = [
  "clipboard-all",
  "dialog-open",
  "dialog-save",
  "fs-copy-file",
  "fs-create-dir",
  "fs-exists",
  "fs-read-dir",
  "fs-read-file",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "fs-write-file",
  "global-shortcut-all",
  "http-all",
  "notification-all",
  "os-all",
  "path-all",
  "shell-open"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Database and storage
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
csv = "1.3"
rand = "0.8"
async-trait = "0.1"
urlencoding = "2.1"
regex = "1.10"

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
zeroize = { version = "1.7", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
sha2 = "0.10"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and environment
config = "0.14"
toml = "0.8"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
base64 = "0.21"
dirs = "5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
