[package]
name = "free-deep-research-system"
version = "3.0.0"
description = "Enterprise-grade deep research system operating entirely on free service tiers"
authors = ["BMAD AI Agent Team"]
license = "MIT"
repository = "https://github.com/usemanusai/free-deep-research"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "2.0", features = [
  "clipboard-all",
  "dialog-open",
  "dialog-save",
  "fs-copy-file",
  "fs-create-dir",
  "fs-exists",
  "fs-read-dir",
  "fs-read-file",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "fs-write-file",
  "global-shortcut-all",
  "http-all",
  "notification-all",
  "os-all",
  "path-all",
  "shell-open"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP client and networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"

# Database and storage
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
csv = "1.3"
rand = "0.8"
async-trait = "0.1"
urlencoding = "2.1"
regex = "1.11"

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
sha2 = "0.10"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and environment
config = "0.14"
toml = "0.8"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
base64 = "0.22"
dirs = "5.0"

# Export and document generation (V1.1.0)
wkhtmltopdf = "0.5"
docx-rs = "0.4"
zip = "0.6"
tempfile = "3.8"
image = "0.24"
plotters = "0.3"

# V1.2.0 Dependencies
# Plugin system and sandboxing
wasmtime = "15.0"
libloading = "0.8"
seccomp = "0.4"

# Machine learning and analytics
candle-core = "0.3"
candle-nn = "0.3"
ndarray = "0.15"
linfa = "0.7"
smartcore = "0.3"

# Cloud storage providers
aws-sdk-s3 = "0.39"
google-cloud-storage = "0.15"
azure_storage = "0.17"
azure_storage_blobs = "0.17"

# Enterprise features
jsonwebtoken = "9.2"
ldap3 = "0.11"
saml2 = "0.6"
bcrypt = "0.15"

# Workflow engine
petgraph = "0.6"
daggy = "0.8"

# V2.0.0 Dependencies
# Distributed systems and microservices
consul = "0.4"
etcd-rs = "1.0"
kubernetes = "0.87"
docker-api = "0.14"

# Real-time communication
tokio-tungstenite = "0.20"
tonic = "0.10"
prost = "0.12"

# Advanced security
ring = "0.17"
aes-gcm = "0.10"
x25519-dalek = "2.0"

# Performance and monitoring
prometheus = "0.13"
opentelemetry = "0.21"
jaeger = "0.20"

# V3.0.0 Dependencies - Global Intelligence Network
# Post-quantum cryptography
pqcrypto = "0.17"
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"

# Blockchain and distributed ledger
substrate-lite = "0.1"
merkle = "2.0"
blake3 = "1.5"

# Advanced NLP and ML
candle-transformers = "0.3"
tokenizers = "0.15"
hf-hub = "0.3"

# Knowledge graph and graph processing
neo4j = "0.6"
graph-rs = "0.2"

# Federated systems and networking
libp2p = "0.53"
multiaddr = "0.18"
prost-build = "0.12"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
